fix: various fixes
- Prevent redundant scrollbars on card popover
- Fix popover overflow
- Remove loader for joyID tokenscript actions

--- a/javascript/tokenscript-viewer/src/components/common/card-view/card-popover.css
+++ b/javascript/tokenscript-viewer/src/components/common/card-view/card-popover.css
@@ -11,7 +11,8 @@
 	max-height: 700px;
 	display: flex;
 	flex-direction: column;
-	height: calc(100vh - 100px);
+	height: calc(100dvh - 80px);
+	overflow: hidden;
 }
 
 .view-loader {
